# FFmpegDemo

./: .gitignore  .gitlab-ci.yml  README.md  bintray.gradle  build.gradle  settings.gradle  test.jks  version_config.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 2
app/src/main/cpp/: CMakeLists.txt  android_log.h  cmdutils.c  config.h  ffmepg_native.c  ffmepg_native.h  ffmpeg.c  ffmpeg_thread.h  native_lib.c
ffmpeg/: CMakeLists.txt  build.gradle  build_android  build_android.sh  config.asm  config.h  configure  gradle.properties  publish.gradle  upload_nexus.gradle
ffmpeg/doc/: config.texi
ffmpeg/doc/examples/pc-uninstalled/: libavformat-uninstalled.pc
ffmpeg/fdk-aac/: Makefile  Makefile.in  build_aac_android.sh  configure  libfdk-aac.la  libtool
ffmpeg/fdk-aac/.libs/: libfdk-aac.lai
ffmpeg/fdk-aac/autom4te.cache/: output.1  requests  traces.0
ffmpeg/fdk-aac/libAACdec/src/: FDK_delay.lo  aac_ram.lo  aac_rom.lo  aacdec_drc.lo  aacdec_hcr.lo  aacdec_hcr_bit.lo  aacdec_hcrs.lo  aacdec_pns.lo  aacdec_tns.lo  aacdecoder.lo  aacdecoder_lib.lo  block.lo  channel.lo  channelinfo.lo  conceal.lo  ldfiltbank.lo  pulsedata.lo  rvlc.lo  rvlcbit.lo  rvlcconceal.lo  stereo.lo  usacdec_ace_d4t64.lo  usacdec_ace_ltp.lo  usacdec_acelp.lo  usacdec_fac.lo  usacdec_lpc.lo  usacdec_lpd.lo  usacdec_rom.lo
ffmpeg/fdk-aac/libAACenc/src/: aacEnc_ram.lo  aacEnc_rom.lo  aacenc.lo  aacenc_lib.lo  aacenc_pns.lo  aacenc_tns.lo  adj_thr.lo  band_nrg.lo  bandwidth.lo  bit_cnt.lo  bitenc.lo  block_switch.lo  channel_map.lo  chaosmeasure.lo  dyn_bits.lo  grp_data.lo  intensity.lo  line_pe.lo  metadata_compressor.lo  metadata_main.lo  mps_main.lo  ms_stereo.lo  noisedet.lo  pnsparam.lo  pre_echo_control.lo  psy_configuration.lo  psy_main.lo  qc_main.lo  quantize.lo  sf_estim.lo  spreading.lo  tonality.lo  transform.lo
ffmpeg/fdk-aac/libArithCoding/src/: ac_arith_coder.lo
ffmpeg/fdk-aac/libDRCdec/src/: FDK_drcDecLib.lo  drcDec_gainDecoder.lo  drcDec_reader.lo  drcDec_rom.lo  drcDec_selectionProcess.lo  drcDec_tools.lo  drcGainDec_init.lo  drcGainDec_preprocess.lo  drcGainDec_process.lo
ffmpeg/fdk-aac/libFDK/src/: FDK_bitbuffer.lo  FDK_core.lo  FDK_crc.lo  FDK_decorrelate.lo  FDK_hybrid.lo  FDK_lpc.lo  FDK_matrixCalloc.lo  FDK_qmf_domain.lo  FDK_tools_rom.lo  FDK_trigFcts.lo  autocorr2nd.lo  dct.lo  fft.lo  fft_rad2.lo  fixpoint_math.lo  huff_nodes.lo  mdct.lo  nlc_dec.lo  qmf.lo  scale.lo
ffmpeg/fdk-aac/libMpegTPDec/src/: tpdec_adif.lo  tpdec_adts.lo  tpdec_asc.lo  tpdec_drm.lo  tpdec_latm.lo  tpdec_lib.lo
ffmpeg/fdk-aac/libMpegTPEnc/src/: tpenc_adif.lo  tpenc_adts.lo  tpenc_asc.lo  tpenc_latm.lo  tpenc_lib.lo
ffmpeg/fdk-aac/libPCMutils/src/: limiter.lo  pcm_utils.lo  pcmdmx_lib.lo
ffmpeg/fdk-aac/libSACdec/src/: sac_bitdec.lo  sac_calcM1andM2.lo  sac_dec.lo  sac_dec_conceal.lo  sac_dec_lib.lo  sac_process.lo  sac_qmf.lo  sac_reshapeBBEnv.lo  sac_rom.lo  sac_smoothing.lo  sac_stp.lo  sac_tsd.lo
ffmpeg/fdk-aac/libSACenc/src/: sacenc_bitstream.lo  sacenc_delay.lo  sacenc_dmx_tdom_enh.lo  sacenc_filter.lo  sacenc_framewindowing.lo  sacenc_huff_tab.lo  sacenc_lib.lo  sacenc_nlc_enc.lo  sacenc_onsetdetect.lo  sacenc_tree.lo  (+3 more)
ffmpeg/ffbuild/: config.fate  config.mak  config.sh
ffmpeg/ffmpegtemp/ffconf.c5NtTHBW/: test.m
ffmpeg/libavcodec/: aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aacdec.d  aacps_float.d  aacsbr.d  aactab.d  ac3_parser.d  ac3tab.d  adts_header.d  adts_parser.d  allcodecs.d  audio_frame_queue.d  av1_frame_merge_bsf.d  av1_parse.d  av1_parser.d  avdct.d  avpacket.d  avpicture.d  bitstream.d  bitstream_filter.d  bitstream_filters.d  blockdsp.d  bsf.d  bsf_list.c  cbs.d  cbs_av1.d  codec2utils.d  codec_desc.d  codec_list.c  dca.d  dca_exss.d  dca_parser.d  decode.d  dirac.d  dirac_parser.d  dnxhddata.d  dv_profile.d  encode.d  error_resilience.d  (+89 more)
ffmpeg/libavcodec/arm/: blockdsp_init_arm.d  blockdsp_init_neon.d  h264pred_init_arm.d  idctdsp_init_arm.d  idctdsp_init_armv5te.d  idctdsp_init_armv6.d  idctdsp_init_neon.d  me_cmp_init_arm.d  pixblockdsp_init_arm.d  pixblockdsp_neon.d  videodsp_init_arm.d  videodsp_init_armv5te.d
ffmpeg/libavdevice/: libavdevice.pc
ffmpeg/libavfilter/: audio.d  avfilter.d  avfiltergraph.d  buffersink.d  buffersrc.d  fifo.d  formats.d  graphdump.d  libavfilter.pc  pthread.d  video.d
ffmpeg/libavformat/: 3dostr.d  4xm.d  aacdec.d  aadec.d  ac3dec.d  acm.d  act.d  adp.d  ads.d  adxdec.d  aea.d  afc.d  aiffdec.d  aixdec.d  allformats.d  alp.d  amr.d  anm.d  apc.d  ape.d  apetag.d  apm.d  apngdec.d  aptxdec.d  aqtitledec.d  argo_asf.d  asf.d  asfdec_f.d  asfdec_o.d  assdec.d  ast.d  astdec.d  au.d  av1.d  av1dec.d  avc.d  avidec.d  avienc.d  avio.d  aviobuf.d  (+328 more)
ffmpeg/libavutil/: buffer.d  dovi_meta.d  frame.d  libavutil.pc  pixelutils.d  tx.d  tx_double.d  tx_float.d  tx_int32.d  video_enc_params.d
ffmpeg/libswresample/: libswresample.pc
ffmpeg/libswscale/: libswscale.pc
ffmpeg/openssl/: Makefile  configdata.pm  libcrypto.map  libssl.map  openssl.pc  pod2htmd.tmp
ffmpeg/openssl/Configurations/: 15-android.conf
ffmpeg/openssl/apps/: openssl  speed.d  version.d
ffmpeg/openssl/fuzz/: asn1.d  asn1parse-test  bignum-test  bndiv-test  client-test  client.d  cms-test  crl-test  server.d
ffmpeg/openssl/test/: afalgtest.d  asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_internal_test.d  asn1_time_test  asynciotest.d  asynctest  bad_dtls_test.d  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  buildtest_c_aes  buildtest_c_async  buildtest_c_bio  buildtest_c_blowfish  buildtest_c_bn  buildtest_c_cast  buildtest_c_cmac  buildtest_c_conf_api  buildtest_c_crypto  buildtest_c_ct  buildtest_c_des  buildtest_c_dh  buildtest_c_dsa  buildtest_c_ec  buildtest_c_evp  buildtest_c_hmac  buildtest_c_kdf  buildtest_c_lhash  buildtest_c_modes  buildtest_c_obj_mac  buildtest_c_objects  buildtest_c_ocsp  buildtest_c_ossl_typ  buildtest_c_pem  buildtest_c_pkcs7  buildtest_c_rand  (+103 more)
ffmpeg/openssl/util/: shlib_wrap.sh
ffmpeg/src/main/: AndroidManifest.xml
(+1602 files in other folders)
